--- a/husels/templates/base.html
+++ b/husels/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Django Central</title>
+        <title>Hay una serpiente en la sopa</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700"
               rel="stylesheet">
         <meta name="google" content="notranslate" />
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow"
              id="mainNav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">Django central</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Hay una serpiente en la sopa</a>
                 <button class="navbar-toggler navbar-toggler-right"
                         type="button"
                         data-toggle="collapse"
@@ -69,7 +69,7 @@
         <!-- Footer -->
         <footer class="py-3 bg-grey">
             <p class="m-0 text-dark text-center ">
-                Copyright &copy; Django Central
+                Copyright &copy; Hay una serpiente en la sopa
             </p>
         </footer>
     </body>
