--- a/husels/templates/index.html
+++ b/husels/templates/index.html
@@ -21,10 +21,8 @@
             <div class="row">
                 <div class=" col-md-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                        <h3 class=" site-heading my-4 mt-3 text-white">Welcome to my awesome Blog</h3>
-                        <p class="text-light">
-                            We Love Django As much as you do..! &nbsp
-                        </p>
+                        <h3 class=" site-heading my-4 mt-3 text-white">Por Ernesto NM</h3>
+                        <p class="text-light">Cuentos ligramente fuera de lugar y otras cosas &nbsp</p>
                     </div>
                 </div>
             </div>
@@ -44,7 +42,7 @@
                             <p class="card-text">
                                 {{ post.content|slice:":200" }}
                             </p>
-                            <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                            <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Leer &rarr;</a>
                         </div>
                     </div>
                 {% endfor %}
